Add hidden form for netlify forms

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,6 @@
   </head>
   <body>
     <div id="root"></div>
- 
+    <form class="hidden_form" data-netlify="true" name="contact"></form>
   </body>
 </html>
