Add hidden form with additional atributes

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,12 @@
     <title>React App</title>
   </head>
   <body>
+
+    <form name="contact" class="hidden_form" data-netlify="true" netlify-honeypot="bot-field" type="hidden">
+        <input type="email" name="name" />
+        <textarea type="message" name="email" ></textarea>
+    </form>
+
     <div id="root"></div>
-    <form class="hidden_form" data-netlify="true" name="contact"></form>
   </body>
 </html>
