--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,11 @@
     <title>React App</title>
   </head>
   <body>
+    <form class="hidden_form" name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="email" name="name" />
+      <textarea type="message" name="message" ></textarea>
+      <input type="checkbox" id="scales" name="scales"/>
+    </form>
     <div id="root"></div>
   </body>
 </html>
