--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,9 @@
     <title>React App</title>
   </head>
   <body>
-    <form class="hidden_form" name="contact" netlify netlify-honeypot="bot-field" hidden>
-      <input type="email" name="name" />
-      <textarea type="message" name="message" ></textarea>
-      <input type="checkbox" id="scales" name="scales"/>
+    <form class="hidden_form" name="contact" data-netlify="true" netlify-honeypot="bot-field" type="hidden">
+        <input type="email" name="email" />
+        <textarea name="message" ></textarea>
     </form>
     <div id="root"></div>
   </body>
