--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,10 @@
     <title>React App</title>
   </head>
   <body>
-    <form class="hidden_form" name="contact" data-netlify="true" netlify-honeypot="bot-field" type="hidden">
-        <input type="email" name="email" />
-        <textarea name="message" ></textarea>
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
     </form>
     <div id="root"></div>
   </body>
