Add one file for displaying delivery details
Based on delivery option from cart
Add styles to cart
Implement third part libary in one of
deliviery options

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
       name="description"
       content="Bruno-Leatherworks e-commerce"
     />
+    <script async src="https://geowidget.easypack24.net/js/sdk-for-javascript.js"></script>
+    <link rel="stylesheet" href="https://geowidget.easypack24.net/css/easypack.css"/> 
     <link rel="stylesheet"  href="./styles/main.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
